--- a/aula2_2023/README
+++ b/aula2_2023/README
@@ -19,7 +19,7 @@ choco install kind
 
 
 ------------
-instalando kind
+#instalando kind
 
 https://kind.sigs.k8s.io/docs/user/quick-start/
 
@@ -36,4 +36,7 @@ curl -Lo ./kind https://kind.sigs.k8s.io/dl/v0.18.0/kind-linux-amd64
 chmod +x ./kind
 sudo mv ./kind /usr/local/bin/kind
 -------------------------------------
-
+#create cluster usando kind
+kind create cluster --name labx2
+# criando namespaces
+kubectl create ns zabbix app
