--- a/chaos_lab/README
+++ b/chaos_lab/README
@@ -12,8 +12,7 @@ kubectl cluster-info --context kind-chaos-lab
 kubectl create deployment nginx --image=nginx --replicas=2
 kubectl expose deployment nginx --port=80 --type=LoadBalancer
 #Instale o Litmus Chaos, uma plataforma de Chaos Engineering de código aberto:
-bash
-kubectl apply -f kubectl apply -f https://litmuschaos.github.io/litmus/3.0.0-beta6/litmus-3.0.0-beta6.yaml
+ kubectl apply -f https://litmuschaos.github.io/litmus/3.0.0-beta6/litmus-3.0.0-beta6.yaml
 
 #Verifique se o Litmus Chaos foi instalado corretamente:
 
