--- a/container_dockerfile/README
+++ b/container_dockerfile/README
@@ -1,5 +1,5 @@
 wget https://raw.githubusercontent.com/able2cloud/continuous_monitoring_log_analytics/main/container_dockerfile/Dockerfile
 wget https://raw.githubusercontent.com/able2cloud/continuous_monitoring_log_analytics/main/container_dockerfile/index.html
-wget https://raw.githubusercontent.com/able2cloud/continuous_monitoring_log_analytics/main/container_dockerfile/Dockerfile
-docker build -t meu-nginx .
+https://raw.githubusercontent.com/able2cloud/continuous_monitoring_log_analytics/main/container_dockerfile/nginx.conf
+docker build -t aula-nginx .
 docker run -d -p 80:80 aula-nginx .
