--- a/aula1/Readme
+++ b/aula1/Readme
@@ -77,7 +77,9 @@ helm install zabbix zabbix-community/zabbix
 
 
 Cheque se o serviço está de pé:
-kubectl get pods
+kubectl get pods -w
+
+quando o serviço estiver running (depois mais de ou menos 1 minuto)
 
 agora exponha a porta via host:
 kubectl port-forward service/zabbix-zabbix-web 8888:80
@@ -95,124 +97,3 @@ Adicionar um Host no Zabbix:
 
 
 
-Subindo uma Aplicação e Configurando o Monitoramento no Zabbix
-Suba sua aplicação usando kubectl
-
-appexample.yaml
-
-
-
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: httpbin
-spec:
-  replicas: 2 
-  selector:
-    matchLabels:
-      app: httpbin
-  template:
-    metadata:
-      labels:
-        app: httpbin
-    spec:
-      containers:
-      - name: httpbin
-        image: kennethreitz/httpbin
-        ports:
-        - containerPort: 80
-
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: httpbin
-spec:
-  selector:
-    app: httpbin
-  ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 80
-  type: LoadBalancer
-
-
-crie a app
-kubectl create -f nginx.yaml
-
-
-checar serviço do nginx
- kubectl get svc | grep nginx
-
-
-
-
-
-
-Implantar o NGINX no Kubernetes
-Primeiro, certifique-se de que o NGINX está implantado no seu cluster Kubernetes. Você pode usar o seguinte manifesto para criar um Deployment e um Service:
-
-Crie um arquivo nginx-deployment.yaml com o seguinte conteúdo:
-
-yaml
-Copy code
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: nginx
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: nginx
-  template:
-    metadata:
-      labels:
-        app: nginx
-    spec:
-      containers:
-      - name: nginx
-        image: nginx:latest
-        ports:
-        - containerPort: 80
-Crie um arquivo nginx-service.yaml com o seguinte conteúdo:
-
-yaml
-Copy code
-apiVersion: v1
-kind: Service
-metadata:
-  name: nginx
-spec:
-  type: LoadBalancer
-  selector:
-    app: nginx
-  ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 80
-Aplique esses manifestos no Kubernetes com:
-
-kubectl apply -f nginx-deployment.yaml
-kubectl apply -f nginx-service.yaml
-Monitorar o NGINX no Zabbix
-Para monitorar o NGINX no Zabbix, siga estas etapas:
-
-Adicione o host no Zabbix:
-
-Vá para "Configuration" > "Hosts" no Zabbix e clique em "Create host".
-Preencha as informações do host (por exemplo, nome do host nginx e grupo ao qual ele pertencerá).
-Crie um Item de Monitoramento:
-
-Na página de configuração do host nginx, procure por uma aba ou seção chamada "Items" e clique em "Create item".
-Aqui está como você pode configurar o item:
-Name: NGINX Homepage Check
-Type: Selecione "HTTP agent" ou similar, dependendo da sua versão do Zabbix.
-Key: Este é um identificador único para o item. Para um item de HTTP agent, o Zabbix geralmente preenche automaticamente este campo com uma chave adequada, como web.page.get[<url>,<path>,<port>]. Você pode precisar ajustar isso para apontar para o seu serviço NGINX, como web.page.get[http://nginx-service.default.svc.cluster.local,,80], substituindo nginx-service.default.svc.cluster.local pelo nome do serviço do NGINX no seu cluster Kubernetes.
-Configure os demais parâmetros conforme necessário, como o intervalo de atualização (update interval) e as condições de trigger.
-Salvar o item:
-
-Após configurar, clique em "Add" para salvar o item de monitoramento.
-Crie Triggers conforme necessário:
-
-Volte para a página de detalhes do host nginx, vá para a aba "Triggers", e crie triggers para definir sob quais condições você deseja ser alertado sobre problemas com o serviço NGINX.
