--- a/aulas_2024/aula2/Readme
+++ b/aulas_2024/aula2/Readme
@@ -7,7 +7,9 @@ Create Cluster com kind:
 
 kind create cluster aula1
 
+Crie o namespace
 
+kubectl create ns monitoring
 
 Configurando zabbix com helm
 
@@ -18,7 +20,7 @@ helm repo update
 Instale o Zabbix usando Helm:
 
 
-helm install zabbix zabbix-community/zabbix
+helm install zabbix zabbix-community/zabbix --namespace monitoring
 
 
 Cheque se o serviço está de pé:
@@ -38,6 +40,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: zabbix-agent
+  namespace: monitoring
 spec:
   replicas: 1
   selector:
@@ -69,6 +72,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: zabbix-agent-config
+  namespace: monitoring
 data:
   zabbix_agent2.conf: |
     Server=zabbix-server
@@ -86,6 +90,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: zabbix-agent
+  namespace: monitoring
 spec:
   selector:
     app: zabbix-agent
