--- a/aulas_2024/aula2/Readme
+++ b/aulas_2024/aula2/Readme
@@ -29,7 +29,7 @@ kubectl get pods -n monitoring -w
 quando o serviço estiver running (depois mais de ou menos 1 minuto)
 
 agora exponha a porta via host:
-kubectl port-forward service/zabbix-zabbix-web 8888:80
+kubectl port-forward service/zabbix-zabbix-web 8888:80 -n monitoring
 
 
 
