--- a/aulas_2024/aula2/Readme
+++ b/aulas_2024/aula2/Readme
@@ -5,8 +5,7 @@ helm repo add zabbix-community https://zabbix-community.github.io/helm-zabbix
 helm repo update
 #install zabbix helm
 
-wget github/taylor/raw/zabbix_values.yaml
-
+wget https://raw.githubusercontent.com/able2cloud/continuous_monitoring_log_analytics/main/aulas_2024/aula2/zabbix_values.yaml
 
 
 
