--- a/aulas_2024/aula3/README
+++ b/aulas_2024/aula3/README
@@ -2,7 +2,7 @@
 kind create cluster --name aula4-casa
 
 # Instale o Metrics Server
-wget /url/metricserverfull.yaml
+wget https://raw.githubusercontent.com/able2cloud/continuous_monitoring_log_analytics/main/aulas_2024/aula3/metricserverfull.yaml
 kubectl apply -f metricserverfull.yaml
 
 # Adicione os repositórios do Helm para Prometheus e Grafana
