--- a/aulas_2024/aula3/README
+++ b/aulas_2024/aula3/README
@@ -1,5 +1,5 @@
 # Crie um cluster no KIND
-kind create cluster --name aula4-casa
+kind create cluster --name aula4
 
 # Instale o Metrics Server
 wget https://raw.githubusercontent.com/able2cloud/continuous_monitoring_log_analytics/main/aulas_2024/aula3/metricserverfull.yaml
